# xray-core-rs

./: .codecov.yaml  Cargo.toml  deny.toml
.github/: codecov.yaml
.github/workflows/: CI.yaml
src/: core.rs  lib.rs  proto.rs  session.rs
src/core/: authentificator.rs  config.rs  service.rs
src/proto/: trojan_request.rs  udp_packet.rs
src/session/: forward_session.rs  server_session.rs
