[package]
name = "xray-core-rs"
edition = "2021"

[dependencies]
tracing = "0.1.40"
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["net", "time", "io-util", "rt-multi-thread", "macros"] }
thiserror = "1.0.63"
tokio-openssl = "0.6.4"
openssl = "0.10.66"
tokio-util = "0.7.11"
async-trait = "0.1.81"
tracing-subscriber = "0.3.18"

